[gd_scene load_steps=5 format=3 uid="uid://bdh61ttaohn0"]

[ext_resource type="Script" uid="uid://tiq8ff2ojo0u" path="res://scenes/gameplay/edit/chart_editor.gd" id="1_jdpge"]
[ext_resource type="Shader" uid="uid://bdpvja82fwv8o" path="res://scenes/gameplay/edit/note_panel.gdshader" id="2_jdpge"]
[ext_resource type="FontFile" uid="uid://ddfumfkyfy17s" path="res://assets/ui/fonts/vcr.ttf" id="3_n1c82"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_n1c82"]
shader = ExtResource("2_jdpge")
shader_parameter/regular_color = Color(1, 1, 1, 0.5)
shader_parameter/quarter_color = Color(1, 1, 1, 0.8)
shader_parameter/regular_thickness = 0.002
shader_parameter/quarter_thickness = 0.003
shader_parameter/lines_below = 16
shader_parameter/offset = 0.05

[node name="chart_editor" type="Node2D"]
script = ExtResource("1_jdpge")

[node name="bg" type="ColorRect" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0, 0, 0, 1)

[node name="grid_layer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1280.0
offset_bottom = 720.0
grow_horizontal = 2
grow_vertical = 2

[node name="color_rect" type="ColorRect" parent="grid_layer"]
material = SubResource("ShaderMaterial_n1c82")
layout_mode = 0
offset_left = 440.0
offset_right = 840.0
offset_bottom = 720.0
color = Color(0.3, 0.3, 0.3, 1)

[node name="time_text" type="Label" parent="grid_layer"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 102.0
offset_right = 430.0
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_n1c82")
theme_override_font_sizes/font_size = 24
text = "0:00 / 0:00
100.0 BPM"
horizontal_alignment = 2
